[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/MAINMENU.gd" type="Script" id=1]

[node name="MAINMENU" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.333333, 0.309804, 0.368627, 1 )

[node name="title" type="Label" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 410.0
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )
text = "helo i am a marcels game about 1v1 battling with abilities"

[node name="play1_label" type="Label" parent="."]
margin_left = 256.0
margin_top = 160.0
margin_right = 346.0
margin_bottom = 174.0
text = "1v1 arena bo3"

[node name="play1" type="Button" parent="."]
margin_left = 256.0
margin_top = 192.0
margin_right = 297.0
margin_bottom = 212.0
rect_scale = Vector2( 2, 2 )
text = "start"

[node name="server_list" type="Button" parent="."]
margin_left = 564.0
margin_top = 345.0
margin_right = 674.0
margin_bottom = 365.0
text = "local server list"

[node name="nav_play" type="Button" parent="."]
margin_left = 32.0
margin_top = 360.0
margin_right = 160.0
margin_bottom = 392.0
text = "PLAY"

[node name="nav_settings" type="Button" parent="."]
margin_left = 32.0
margin_top = 408.0
margin_right = 160.0
margin_bottom = 440.0
disabled = true
text = "SETTINGS"

[node name="nav_exit" type="Button" parent="."]
margin_left = 33.0
margin_top = 455.0
margin_right = 161.0
margin_bottom = 487.0
disabled = true
text = "EXIT"

[connection signal="pressed" from="play1" to="." method="_on_play1_pressed"]
[connection signal="pressed" from="server_list" to="." method="_on_server_list_pressed"]
[connection signal="pressed" from="nav_play" to="." method="_on_nav_play_pressed"]
